--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Events\ve-3350.tmp" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.0-rc2-00703" />
     <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc2-00703" />
     <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc2-00703" />
