--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -7,10 +7,10 @@
 
   <ItemGroup>
     <None Remove="Events\ve-3350.tmp" />
+    <None Remove="Modules\Crime\ve-9C40.tmp" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Addons.Preconditions" Version="0.2.5-rc" />
     <PackageReference Include="Discord.Net" Version="1.0.0-rc3-00743" />
     <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc3-00743" />
     <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc3-00743" />
