--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.4.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.3" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="Troschuetz.Random" Version="4.1.3" />
   </ItemGroup>
 
 </Project>
