--- a/nuget.config
+++ b/nuget.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources />
+  <packageSources>
+	<add key="Discord.NET" value="https://www.myget.org/F/discord-net/api/v3/index.json" />
+  </packageSources>
 </configuration>
