--- a/src/config.json
+++ b/src/config.json
@@ -25,7 +25,7 @@
     [150, 36, 237],
     [168, 237, 0]
   ],
-  "defaultPrefix": "$",
+  "prefix": "$",
   "readyMessage": "$info",
   "disabledEvents": [
     "RESUMED",
