--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,7 @@
       2,
       { "SwitchCase": 1 }
     ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
+    "linebreak-style": "off",
     "quotes": [
       "error",
       "single"
