--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
-  - "8"
+- '8'
 cache:
   directories:
-    - node_modules
+  - node_modules
 install: npm install
 sudo: enabled
 dist: trusty
+dd:
+- openssl aes-256-cbc -K $encrypted_3c6220a5a839_key -iv $encrypted_3c6220a5a839_iv
+  -in credentials.json.enc -out src/credentials.json -d
