--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install: npm install
 sudo: enabled
 dist: trusty
 dd:
-- openssl aes-256-cbc -K $encrypted_3c6220a5a839_key -iv $encrypted_3c6220a5a839_iv
-  -in credentials.json.enc -out src/credentials.json -d
+- openssl aes-256-cbc -K $encrypted_2d374cd4b54f_key -iv $encrypted_2d374cd4b54f_iv
+  -in credentials.json.enc -out credentials.json -d
