--- a/src/config.json
+++ b/src/config.json
@@ -29,8 +29,9 @@
   "prefix": "$",
   "readyMessage": "$info",
   "inviteLink": "https://discordapp.com/oauth2/authorize?client_id=290823959669374987&scope=bot&permissions=8",
+  "serverInviteLink": "https://discord.gg/gvyma7H",
+  "documentationLink": "https://realblazeit.github.io/DEA/",
   "disabledEvents": [
-    "RESUMED",
     "GUILD_SYNC",
     "GUILD_ROLE_CREATE",
     "GUILD_ROLE_DELETE",
