--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
+  "minRepForRemove": 20,
   "lotteryOdds": 1.5,
   "lotteryMin": 2500,
   "lotteryMax": 10000,
@@ -10,9 +11,6 @@
     "Sweet Baby Jesus you just won {0} in the fucking lottery! Use `$info` for more information.",
     "Well I'll be damned, you just won {0} in the goddamn lottery! Use `$info` for more information."
   ],
-  "gangBangOdds": 5,
-  "gangBangMin": 10000,
-  "gangBangSteal": 0.20,
   "cashPerMessage": 50,
   "minTransfer": 5,
   "transactionCut": 0.1,
