--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ cache:
 install: npm install
 sudo: enabled
 dist: trusty
+before_install:
+- openssl aes-256-cbc -K $encrypted_2d374cd4b54f_key -iv $encrypted_2d374cd4b54f_iv
+  -in credentials.json.enc -out src/credentials.json -d
