--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The cleanest Discord Bot around.",
   "main": "src/index.js",
   "scripts": {
-    "test": "node src/index.js"
+    "test": "node test/index.js"
   },
   "repository": {
     "type": "git",
