--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ node_js:
 cache:
   directories:
   - node_modules
-install: npm install
+install: 
+   - npm install node-gyp -g
+   - npm cache clean
+   - rm -rf node_modules
+   - npm install
 sudo: enabled
 dist: trusty
 before_install:
