--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   },
   "homepage": "https://github.com/RealBlazeIt/dea#readme",
   "dependencies": {
-    "bufferutil": "^3.0.2",
     "discord.js": "^11.1.0",
-    "erlpack": "github:hammerandchisel/erlpack",
     "mongodb": "^2.2.30",
     "patron.js": "github:RealBlazeIt/patron",
-    "uws": "^0.14.5"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^3.0.2",
+    "erlpack": "github:hammerandchisel/erlpack",
+	"uws": "^0.14.5"
   },
   "eslintIgnore": [
     "**/*.json"
