--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
   "minRich": 10000,
-  "fineInterval": 3600000,
-  "fineOdds": 5,
-  "fineCut": 0.25,
+  "fineInterval": 450000,
+  "fineOdds": 0.30,
+  "fineCut": 0.30,
   "fineMessages": [
     "So you think you can get away with laundering thousands of dollars in dirty drug money, and the fucking DEA wouldn't know about it? I will let you off with a {0} fine this time, but next time you are behind bars pal.",
     "Listen buddy, I have been watching you for a while, and I finally got everything I need to prove you are a drug smuggler. Lucky you the judge was a softie, so you are walking away with a {0} fine.",
