--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ sudo: enabled
 dist: trusty
 before_install:
 - openssl aes-256-cbc -K $encrypted_3c6220a5a839_key -iv $encrypted_3c6220a5a839_iv
-  -in test/credentials.json.enc -out test/credentials.json -d
+  -in test/credentials.json.enc -out src/credentials.json -d
