--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The cleanest Discord Bot around.",
   "main": "src/index.js",
   "scripts": {
-    "test": "node test/index.js"
+    "run": "node src/index.js",
+    "test": "node test/index.js",
+    "lint": "eslint --fix src/**"
   },
   "repository": {
     "type": "git",
@@ -35,5 +37,8 @@
   },
   "eslintIgnore": [
     "**/*.json"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^4.2.0"
+  }
 }
