--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
-  "minRich": 10000,
+  "minRich": 25000,
   "fineInterval": 450000,
   "fineOdds": 0.40,
-  "additionalFineOdds": 0.000005,
-  "fineCut": 0.35,
+  "additionalFineOdds": 0.0000025,
+  "fineCut": 0.45,
   "fineMessages": [
     "So you think you can get away with laundering thousands of dollars in dirty drug money, and the fucking DEA wouldn't know about it? I will let you off with a {0} fine this time, but next time you are behind bars pal.",
     "Listen buddy, I have been watching you for a while, and I finally got everything I need to prove you are a drug smuggler. Lucky you Judge Red Forman was a softie, you are walking away with only a {0} fine.",
